# quintet_system

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: backtest-improvements.md  ibkr-historical-refresh-plan.md  trade-flow-architecture-spec.md  trade-flow-implementation-todo.md
notes/: cluster_missing_data.md  todo.md
src/quintet/: __init__.py  config.py  scheduler.py
src/quintet/broker/: __init__.py  gateway.py  models.py
src/quintet/contract_handler/: __init__.py  contract_registry.py  historical_bars.py  product_master.py  schema.py  update_contracts.py
src/quintet/dashboard/: __init__.py  __main__.py  app.py  config.py
src/quintet/data/: paths.py
src/quintet/execution/: __init__.py  dry_run.py  ibkr.py  models.py  serialize.py
src/quintet/flows/: __init__.py  daily.py
src/quintet/make_predictions/: __init__.py  __main__.py  clusters.py  predictor.py
src/quintet/pipeline/: __init__.py  context.py  funnel.py  positions.py
src/quintet/process_contracts/: __init__.py  __main__.py  indicators.py  processor.py
src/quintet/run/: console.py  (+2 more)
tests/: test_scheduler.py  test_trade_console.py
tests/broker/: test_ibkr_calendar.py  test_ibkr_client_config.py  test_ibkr_executor.py  test_ibkr_executor_live.py  test_ibkr_orders.py
tests/dashboard/: test_fills.py  test_orders.py  test_overview.py  test_positions.py  test_trade_reports.py
tests/execution/: test_dry_run.py  test_report_counts.py
tests/trading/: test_broker_state_scenarios.py  test_exposure.py  test_maintain.py  test_planner.py  test_prices.py  test_reconcile.py  test_risk.py  test_roll.py
(+59 files in other folders)
