[project]
name = "quintet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=15.0",
    "xgboost>=2.0",
]

[project.optional-dependencies]
ibkr = [
    "ibapi>=9.81",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
dashboard = [
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
    "plotly>=5.18",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
