[project]
name = "quintet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=15.0",
    "xgboost>=2.0",
]

[project.optional-dependencies]
ibkr = [
    # Pulled from the local IBJts source drop, not PyPI.
    # PyPI's `ibapi` is stuck at 9.81 and is missing modules we rely on
    # (e.g. `order_cancel`, the `protobuf` submodule, the current `error()`
    # signature). IBKR only ships current 10.x via the TWS API installer.
    # To set up a new machine: download the TWS API from
    # https://interactivebrokers.github.io/, extract it, and update this path.
    "ibapi @ file:///home/cp/IBJts/IBJts/source/pythonclient",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
dashboard = [
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
    "plotly>=5.18",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
